# learning-foundry

./: .dockerignore  .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
app/: __init__.py  main.py
docker/: lab-tutor-entrypoint.sh  lab-tutor-inject.py  learner-studio.Dockerfile
docs/: COURSE_AUTHORING_PLAYBOOK.md  DEPLOYMENT_RUNBOOK.md  creator-flow-ui-handoff.md  lab-tutor.md  testing-debug-playbook.md  ui-review-note-2026-05-07.md  ui-ux-agent-handoff.md  unseen-stack-dry-run.md
scripts/: backfill_shared_workflow_enrollments.py  bootstrap_creator.py  coursegen_fast_publish.py  coursegen_resume.py  creator_flow_smoke.py  curate_rag_grading_assets.py  grader_disk_prune.sh  grounded_rag_e2e_smoke.py  learner_submission_shim.py  migrate_selected_courses.py  migrate_sqlite_to_postgres.py  migration_verification_report.json  repair_bm25_course_benchmark.py  repair_bm25_course_citation_precision.py  repair_bm25_course_fiqa.py  repair_bm25_course_readme.py  repair_bm25_course_visible_samples.py  replay_failure_smoke.py  test_learner_flow_e2e.py  verify_grader_discrimination.py  verify_migration.py
tests/: test_anthropic_runtime_support.py  test_api.py  test_authoring_payloads.py  test_authoring_resilience.py  test_baseline_matrix_refactor.py  test_behavioral_equivalence_expected_path.py  test_benchmark_loader.py  test_benchmark_visibility_split.py  test_bundle_validation.py  test_bundle_validation_domain_grounding_llm.py  test_capture_includes_raw.py  test_capture_includes_request.py  test_course_generation_async.py  (+95 more)
(+239 files in other folders)
